--- a/TurnkeySDKDemoAndUnitTest/Turnkey/Properties/Settings.settings
+++ b/TurnkeySDKDemoAndUnitTest/Turnkey/Properties/Settings.settings
@@ -18,10 +18,16 @@
       <Value Profile="(Default)">./Turnkey.log</Value>
     </Setting>
     <Setting Name="merchantId" Type="System.String" Scope="Application">
-      <Value Profile="(Default)"></Value>
+      <Value Profile="(Default)">167885</Value>
     </Setting>
     <Setting Name="password" Type="System.String" Scope="Application">
-      <Value Profile="(Default)"></Value>
+      <Value Profile="(Default)">56789</Value>
+    </Setting>
+    <Setting Name="country" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">ES</Value>
+    </Setting>
+    <Setting Name="language" Type="System.String" Scope="Application">
+      <Value Profile="(Default)">es</Value>
     </Setting>
   </Settings>
 </SettingsFile>
