--- a/TurnkeySDKDemoAndUnitTest/Turnkey/bin/TurnkeyDemo.dll.config
+++ b/TurnkeySDKDemoAndUnitTest/Turnkey/bin/TurnkeyDemo.dll.config
@@ -81,27 +81,33 @@
   </system.codedom>
   <applicationSettings>
     <Turnkey.Properties.Settings>
-      <setting name="allowOriginUrl" serializeAs="String">
-        <value>http://localhost:8080</value>
-      </setting>
-      <setting name="merchantNotificationUrl" serializeAs="String">
-        <value>http://localhost:8080/api/TransactionResultCallback</value>
-      </setting>
-      <setting name="merchantLandingPageUrl" serializeAs="String">
-        <value>http://localhost:8080/</value>
-      </setting>
-      <setting name="TurnkeySdkConfig" serializeAs="String">
-        <value>UAT</value>
-      </setting>
-      <setting name="TurnkeySdkHttpLog" serializeAs="String">
-        <value>./Turnkey.log</value>
-      </setting>
-      <setting name="merchantId" serializeAs="String">
-        <value>167885</value>
-      </setting>
-      <setting name="password" serializeAs="String">
-        <value>56789</value>
-      </setting>
+        <setting name="allowOriginUrl" serializeAs="String">
+            <value>http://localhost:8080</value>
+        </setting>
+        <setting name="merchantNotificationUrl" serializeAs="String">
+            <value>http://localhost:8080/api/TransactionResultCallback</value>
+        </setting>
+        <setting name="merchantLandingPageUrl" serializeAs="String">
+            <value>http://localhost:8080/</value>
+        </setting>
+        <setting name="TurnkeySdkConfig" serializeAs="String">
+            <value>UAT</value>
+        </setting>
+        <setting name="TurnkeySdkHttpLog" serializeAs="String">
+            <value>./Turnkey.log</value>
+        </setting>
+        <setting name="merchantId" serializeAs="String">
+            <value>167885</value>
+        </setting>
+        <setting name="password" serializeAs="String">
+            <value>56789</value>
+        </setting>
+        <setting name="country" serializeAs="String">
+            <value>ES</value>
+        </setting>
+        <setting name="language" serializeAs="String">
+            <value>es</value>
+        </setting>
     </Turnkey.Properties.Settings>
   </applicationSettings>
 </configuration>
